# jet_raiders

./: .gitignore  .ready-tmux  ABILITIES.md  AGENTS.md  ARCHITECTURE.md  BACKEND_VERIFICATION.md  BINARY_PROTOCOL_MIGRATION.md  CHALLENGES_AND_SOLUTIONS.md  CLEAN_ARCHITECTURE_GUIDELINES.md  CLEAN_ARCHITECTURE_SEPARATION_APPENDIX.md  CLEAN_ARCHITECTURE_SEPARATION_GUIDE.md  CLIENT_MIGRATION.md  CLIENT_NETWORKING.md  COLLISIONS.md  GAME_SPEC.md  GEMINI.md  HYBRID_MATCHMAKING_ADAPTER.md  IMPLEMENTATION_SUMMARY.md  LOBBY_SYSTEM_IMPLEMENTATIONS.md  NETWORKING_ALLOCATIONS.md  NETWORKING_DEEP_DIVE.md  PHYSICS.md  PROCESS_COMPOSE.md  REDUNDANT_NETWORKING_WORK.md  SIMPLE_AUTH.md  SOLANA_LOGIN.md  SOLID_PRINCIPLES_IN_CODEBASE.md  SQLX_INTEGRATION_PLAN.md  TDD_FOR_CODEX_BOUNDARIES.md  TESTING.md  TESTING_BEGINNER_GUIDE.md  TODO.md  TRACING.md  TRACING_DEEP_DIVE.md  WORLD_UPDATE_SCALING_PLAN.md  process-compose.yaml  spec.md
PRD/: backend-service-dockerfiles-prd.md
auth_server/: .env.example  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile  README.md
auth_server/src/: main.rs
auth_server/src/domain/: entities.rs  errors.rs  ports.rs
auth_server/src/frameworks/: config.rs  db.rs  server.rs
auth_server/src/interface_adapters/: handlers.rs  protocol.rs  routes.rs  state.rs
auth_server/src/use_cases/: guest_login.rs  logout.rs  mod.rs  test_support.rs  verify_token.rs
bruno/: README.md  bruno.json
client/: icon.svg.import  project.godot
config/: backend_ports.toml  regions.toml
docs tbd/: CLEAN_ARCHITECTURE_SEPARATION_PLAYBOOK.md  IMPORTING_LOGIC_CLEAN_ARCHITECTURE.md  MAIN_DISASSEMBLY_GUIDE.md
game_client/: AUTH_INIT_FAILURE_HANDLING_PLAN.md  AUTH_NETWORKING_TEST_A.md  AUTH_NETWORKING_TEST_B.md  AUTH_STATE_MACHINE.md  README.md  (+3 more)
game_server/: .env.example  BINARY_PROTOCOL_MIGRATION.md  CLEAN_ARCHITECTURE_GUIDELINES.md  COLLISIONS.md  COMMUNICATION_CONSIDERATIONS.md  CROSS_CUTTING_CONCERNS.md  Cargo.toml  Dockerfile  LOBBY_CLEANUP_PLAN.md  PHYSICS.md  README.md  SCORE_TIME_SYNC_PLAN.md  SESSION_TOKEN_IDENTITY_PLAN.md  TODO.md
game_server/src/: app_state.rs  guest.rs  lib.rs  main.rs  net.rs  protocol.rs  state.rs
game_server/src/domain/: mod.rs  state.rs
game_server/src/domain/systems/: projectiles.rs  ship_movement.rs
game_server/src/frameworks/: config.rs  mod.rs  server.rs
game_server/src/interface_adapters/: http.rs  mod.rs  net.rs  protocol.rs  state.rs
game_server/src/interface_adapters/clients/: auth.rs  mod.rs
game_server/src/interface_adapters/net/: client.rs  internal.rs  mod.rs
game_server/src/interface_adapters/utils/: rng.rs
game_server/src/systems/: mod.rs
game_server/src/use_cases/: game.rs  lobby.rs  mod.rs  types.rs
game_server/tests/: lobby_create.rs
game_server/tests/support/: mod.rs
matchmaking_server/: .env.example  Cargo.toml  Dockerfile  MATCHMAKING_CODE_PLAN.md  MATCHMAKING_SERVICE.md  README.md
matchmaking_server/src/: main.rs
matchmaking_server/src/domain/: mod.rs  queue.rs
matchmaking_server/src/frameworks/: config.rs  id_generator.rs  mod.rs  server.rs
matchmaking_server/src/interface_adapters/: mod.rs  protocol.rs  routes.rs  state.rs
matchmaking_server/src/interface_adapters/handlers/: health.rs  mod.rs  queue.rs
matchmaking_server/src/use_cases/: matchmaker.rs  mod.rs
server/: Cargo.toml
server/migrations/: 0001_create_guest_profiles.sql
server/src/: app_state.rs  config.rs  db.rs  game.rs  main.rs  net.rs  protocol.rs  state.rs
server/src/systems/: projectiles.rs  ship_movement.rs
server/src/tuning/: player.rs  projectile.rs
server/src/utils/: rng.rs
(+265 files in other folders)
