[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
dotenvy = "0.15.7"
