[package]
name = "game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
tokio-tungstenite = "*"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
