[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
tokio-tungstenite = "*"
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
